# Vibe-Trade

./: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_ABOUT.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.2.md  pyproject.toml  setup.ps1  setup.sh
.claude/: launch.json
.github/workflows/: python-publish.yml
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  page.tsx
apps/web/src/components/: BottomPanel.tsx  Chart.tsx  ChartTile.tsx  ChatInputBar.tsx  DatasetsModal.tsx  DrawingToolbar.tsx  FileUpload.tsx  LeftSidebar.tsx  MetricWidget.tsx  MosaicContainer.tsx  PatternSelectorToolbar.tsx  PineScriptPanel.tsx  ResourcesModal.tsx  RightSidebar.tsx  TileWrapper.tsx  TopBar.tsx  TraceMessage.tsx
apps/web/src/components/canvas/: Canvas.tsx  ChartWindow.tsx
apps/web/src/components/simulation/: DAGCanvas.tsx  SimulationPanel.tsx
apps/web/src/components/tabs/: AgentDetailPanel.tsx  DAGGraphTab.tsx  DebateThreadTab.tsx  HistoricNewsTab.tsx  PersonalitiesTab.tsx  RunStatsTab.tsx
apps/web/src/lib/: api.ts  patternFingerprint.ts  patternMatcher.ts  planExecutor.ts  scriptExecutor.ts  toolRegistry.ts
apps/web/src/lib/chart-primitives/: DrawingToolsPrimitive.ts  NewsMarkersPrimitive.ts  (+3 more)
apps/web/src/store/: useStore.ts
apps/web/src/types/: index.ts
core/: skill_registry.py  skill_types.py  tool_catalog.py
core/agents/: api_error_handler.py  base_agent.py  error_handler_agent.py  llm_client.py  news_data_processor.py  pattern_agent.md  pattern_agent.py  planner.py  processors.py  qa_agent.py  simulation_agents.py  strategy_agent.md  strategy_agent.py  swarm_tools.py  team_planner.py  vibe_trade_agent.py
core/data/: __init__.py  fetcher.py
core/engine/: agent_swarm.py  dag_orchestrator.py
docs/: AGENT_SWARM.md  ARCHITECTURE.md  PREDICT_ANALYSIS.md  PRODUCT.md  SKILLS.md
docs/back/: ARCHITECTURE_v0.4.2.md  CANVAS_v0.4.2.md  SKILLS_v0.4.2.md  SWARM_PIPELINE_pre-v0.4.md  SWARM_PIPELINE_v0.4.2.md
services/: __init__.py
services/api/: main.py  requirements.txt
services/api/routers/: chat.py  simulation.py
skills/: __init__.py  base.py  tools.py
skills/_template/: SKILL.md
skills/data_fetcher/: SKILL.md
skills/historic_news/: SKILL.md
skills/pattern/: SKILL.md
skills/predict_analysis/: SKILL.md
skills/strategy/: SKILL.md
skills/swarm_intelligence/: SKILL.md
vibe_trade/: __init__.py  __main__.py  build_frontend.py  cli.py  fetch_cmd.py  serve_cmd.py  setup_cmd.py  simulate_cmd.py  skills_cmd.py  tools_cmd.py  updater.py  user_config.py
(+3 files in other folders)
